2002-04-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-char-to-int): New alias.
	(w3m-form-mee-attr-unquote): Use it.
	(w3m-form-mee-new): Ditto.

	* w3m-xmas.el (toplevel): Require 'w3m-image.
	(w3m-make-glyph): New inline function.
	(w3m-create-image): Resize images when w3m-resize-images is non-nil.

	* w3m-form.el (w3m-string-to-char-list)[XEmacs]: Use string-to-list
	instead of string-to-char-list.
	(w3m-int-to-char): New alias.
	(w3m-form-mee-select-value): Use it.

2002-04-08  Taiki SUGAWARA  <taiki.s@cityfujisawa.ne.jp>

	* w3m-e20.el (w3m-bitmap-image-insert-internal): Begin the overlay
	on `begion-of-line'.

2002-04-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el: Update URL for xlhtml.

2002-04-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el: Don't require `pcustom'.

2002-04-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-image.el: New file.

	* w3m.el (w3m-halfdump-command-arguments): Specify single-row-image
	dump option instead of image.
	(w3m-goto-mailto-url): Added optional post-data argument and use it.
	(w3m-goto-url): Set post-data of w3m-goto-mailto-url.

	* w3m-util.el (w3m-imagick-convert-program,
	w3m-imagick-convert-buffer, w3m-imagick-convert-data): Moved to
	w3m-image.el.

	* w3m-e21.el (toplevel): Require 'w3m-image.
	(w3m-resize-images, w3m-imagick-start-convert-data,
	w3m-imagick-start-convert-buffer, w3m-imagick-start,
	w3m-resize-image): Moved to w3m-image.el;
	(w3m-create-image): Follow the change in w3m-resize-image.
	(w3m-favicon-usable-p): Renamed from w3m-imagick-convert-usable-p.
	(w3m-use-favicon): Follow the change above.
	(w3m-favicon-cache-data): Fixed typo.
	(w3m-favicon-cache-retrieved): Ditto.
	(w3m-retrieve-favicon): Ditto.

	* w3m-e20.el (w3m-image): Require 'w3m-image.

2002-04-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (multibyte-string-p): Alias to `stringp' if MULE,
	otherwise `ignore'.

	* w3m-om.el (multibyte-string-p): Alias to `stringp'.
